# fvtk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build-cvista.sh  build-fvtk.sh  pyproject.toml  shell.nix  smoke-cvista.py  smoke-fvtk.py
.claude/: CLAUDE.md
.claude/agents/: vtk-backport-engineer.md
.claude/commands/: cvista-release.md  fvtk-release.md  pyvista-bump.md  triage-ci.md
.github/: CODEOWNERS  README.md
.github/workflows/: bitexact.yml  ci.yml  pyvista-bump.yml  sdk.yml  wheels-cibuildwheel.yml  wheels-legacy.yml  wheels-macos.yml  wheels-test.yml  wheels-windows.yml  wheels.yml
CMake/: setup.py.in  vtk-config.cmake.in  vtkModule.cmake  vtkModuleWrapPython.cmake  vtkWheelPreparation.cmake
CMake/wheel_sdks/: CMakeLists.txt  README.md  pyproject.toml.in
CMake/wheel_sdks/cmake/: vtk-config-version.cmake.in  vtk-config.cmake.in
CMake/wheel_sdks/tests/: test_package.py  test_wrap_module.py
Common/Core/: CMakeLists.txt  vtkCVISTASMPDefaults.cxx  vtkCVISTASMPDefaults.h  vtkCreateArrayDispatchArrayList.cmake  vtkFVTKAllocator.cxx  vtkFVTKSMPDefaults.cxx  vtkFVTKSMPDefaults.h  vtkGenericDataArray.txx  vtkGenericDataArrayValueRangeInstantiate.cxx.in  vtkInformationInternals.h  vtkMath.cxx  vtkMath.h  vtkSMPTools.cxx  vtkSMPTools.h  vtkTypeArrays.cmake
Common/Core/SMP/Common/: vtkSMPToolsAPI.cxx  vtkSMPToolsAPI.h
Common/Core/SMP/STDThread/: vtkSMPThreadPool.cxx
Common/DataModel/: vtkCellArray.cxx  vtkCellArray.h  vtkCellLocator.cxx  vtkCellLocator.h  vtkExtractStructuredGridHelper.cxx  vtkHexahedron.cxx  vtkImplicitFunction.cxx  vtkPolyData.cxx  vtkPolyData.h  vtkPolyDataInternals.h  vtkPyramid.cxx  vtkStaticFaceHashLinksTemplate.txx  vtkTetra.cxx  vtkWedge.cxx
Common/Transforms/: CMakeLists.txt  vtkAbstractTransform.cxx  vtkHomogeneousTransform.cxx  vtkLinearTransform.cxx
Filters/Core/: CMakeLists.txt  cvistaFastClean.cxx  cvistaFastClean.h  cvistaFastCleanPoly.cxx  cvistaFastCleanPoly.h  cvistaFastClipPoly.cxx  cvistaFastClipPoly.h  cvistaFastConnectivity.cxx  cvistaFastConnectivity.h  cvistaFastOrient.cxx  cvistaFastOrient.h  fvtkFastCleanPoly.cxx  fvtkFastCleanPoly.h  fvtkFastConnectivity.cxx  fvtkFastConnectivity.h  fvtkFastDecimate.cxx  fvtkFastDecimate.h  pvaClean.h  pvaLinearProbeTable.h  pvaOrient.h  vtk3DLinearGridPlaneCutter.cxx  vtkAppendFilter.cxx  vtkCellCenters.cxx  vtkCellDataToPointData.cxx  vtkCleanPolyData.cxx  vtkClipPolyData.cxx  vtkConnectivityFilter.cxx  vtkContour3DLinearGrid.cxx  vtkContourFilter.cxx  vtkCutter.cxx  vtkDecimatePro.cxx  vtkDecimatePro.h  vtkDelaunay3D.cxx  vtkElevationFilter.cxx  vtkFeatureEdges.cxx  vtkFlyingEdges3D.cxx  vtkGlyph3D.cxx  vtkMaskPoints.cxx  vtkOrientPolyData.cxx  vtkPointDataToCellData.cxx  (+5 more)
Filters/General/: CMakeLists.txt  vtkCurvatures.cxx  vtkImageDataToPointSet.cxx  vtkShrinkFilter.cxx  vtkTableBasedClipDataSet.cxx  vtkWarpScalar.cxx  vtkWarpVector.cxx
Filters/Geometry/: CMakeLists.txt  cvistaFastSurface.cxx  cvistaFastSurface.h  fvtkFastSurface.cxx  fvtkFastSurface.h  pvaExtractSurface.h  vtkDataSetSurfaceFilter.cxx  vtkGeometryFilter.cxx
Filters/Hybrid/: CMakeLists.txt  vtk.module
Filters/HybridRendering/: CMakeLists.txt  vtk.module  vtkAdaptiveDataSetSurfaceFilter.h  vtkPolyDataSilhouette.h  vtkRenderLargeImage.h
Filters/HyperTree/: CMakeLists.txt  vtkHyperTreeGridGenerateFieldStrategy.cxx  vtkHyperTreeGridGenerateFieldStrategy.h
Filters/Verdict/: vtkBoundaryMeshQuality.cxx
IO/Geometry/: CMakeLists.txt  vtk.module  vtkGLTFWriterUtils.cxx  vtkSTLReader.cxx  vtkSTLReader.h
IO/Import/: CMakeLists.txt  vtk.module  vtkGLTFReader.h  vtkGLTFTexture.h
IO/PLY/: CMakeLists.txt  Copyright.txt  vtkPLYReader.cxx  vtkPLYReader.h  vtkPLYWriter.cxx
IO/XML/: vtkXMLWriter.cxx  vtkXMLWriter.h
Rendering/Core/: vtkDataSetMapper.cxx  vtkDataSetMapper.h  vtkRenderer.cxx  vtkRenderer.h
Rendering/HyperTreeGrid/: vtk.module
Rendering/OpenGL2/: vtkDualDepthPeelingPass.cxx  vtkOpenGLBatchedPolyDataMapper.cxx  vtkOpenGLFramebufferObject.cxx  vtkOpenGLLowMemoryBatchedPolyDataMapper.cxx  vtkOpenGLLowMemoryPolyDataMapper.cxx  vtkOpenGLPolyDataMapper.cxx  vtkOpenGLPolyDataMapper.h  vtkOpenGLState.cxx  vtkOpenGLState.h  vtkTextureObject.cxx  vtkTextureObject.h
Rendering/VolumeOpenGL2/: vtkOpenGLGPUVolumeRayCastMapper.cxx
Utilities/Python/: CMakeLists.txt
Wrapping/Python/: CMakeLists.txt  vtkPythonAppInit.cxx
Wrapping/PythonCore/: CMakeLists.txt  PyVTKMethodDescriptor.cxx  PyVTKNamespace.cxx  PyVTKObject.cxx  PyVTKReference.cxx  PyVTKTemplate.cxx  vtkPythonCommand.cxx  vtkPythonTypeAccess.h  vtkPythonUtil.cxx
Wrapping/Tools/: CMakeLists.txt  vtkWrapPythonClass.c  vtkWrapPythonMethodDef.c  vtkWrapPythonNumberProtocol.c
ci/: BLACKSMITH.md  WHEELS.md  build-sdk.sh  build-wheels-linux.sh  check-no-alloc-exports.sh  pgo-build.sh  prune_setup_py.py  run-bitexact.sh  run-cibuildwheel-linux.sh  run-pyvista.sh  run-regression.sh  run-renderexact.sh  smoke_min.py  smoke_test.py  test-sdk.sh
ci/cibw/: before-build.sh  cvista_backend.py  fvtk_backend.py  repair_linux.py  repair_macos.py  repair_windows.py
ci/cmake/: linux.cmake  macos.cmake  windows.cmake
cvista-config/: _base.cmake  _modules.cmake  _modules_minimal.cmake  _nocompile_classes.cmake  _nowrap_classes.cmake  _source_unity_exclude.cmake  fast.cmake  linux.cmake  macos.cmake  minimal.cmake  windows.cmake
docs/: abi3-feasibility.md  build-internals.md  ci-closers.md  ci-runners.md  threading-bitexact.md  versioning.md
fvtk-config/: _modules_minimal.cmake  _nocompile_classes.cmake  _source_unity_exclude.cmake  minimal.cmake
tests/bitexact/: README.md  compare.py  conftest.py  ops.py  pytest.ini  run_ops.py  test_bitexact.py  test_decimate_determinism.py  test_smp_determinism.py  test_wrapper_parity.py  wrapper_parity.py
tests/pyvista/: README.md  deselect.txt
tests/regression/: test_fast_decimate.py  test_ghost_reentrancy.py  test_interactor_unblock.py  test_io_image.py  test_output_precision.py  test_renderwindow_unblock.py  test_smp_python_observer_deadlock.py  (+2 more)
tools/: cvista_shim.py  fvtk_shim.py  pgo-train.py
(+75 files in other folders)
